--- a/src/app/home/body/card/card.component.html
+++ b/src/app/home/body/card/card.component.html
@@ -1,3 +1,29 @@
-<div>
-    <p>a123</p>
+<!-- Contenedor total -->
+<div class="relative w-96 h-[30rem] bg-white shadow-lg  rounded-3xl shadow-black ">
+    
+    <!-- Contenedor de la imagen -->
+    <div class="absolute h-64 top-0 p-2 flex justify-center items-center inset-x-0">
+       <img src={{image}} alt="" class="h-full object-cover">
+    </div>
+
+    <!-- Contenedor de la descripción -->
+    <div class="absolute w-96 h-1/3 bottom-8 flex justify-center text-black uppercase text-2xl">
+
+        <div class="absolute top-0 space-x-3">
+            <span class="w-fit h-fit bg-gray-200 rounded-2xl px-5 font-light"> #{{number}}</span>
+            <span class="font-bold">{{name}}</span> 
+        </div>
+
+        <div class="absolute bottom-0 w-fit h-fit space-x-5">
+            
+            
+            <span>{{types[0]}}</span>
+
+            @if (types[1]) {
+                <span>{{types[1]}}</span>
+            }
+        </div>
+
+    </div>
+
 </div>
