--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,13 @@
 <div>
     <app-header></app-header>
-    <div class="w-20 h-12 mx-5 bg-blue-300">
+    
+    <!-- <div class="w-20 h-12 mx-5 bg-blue-300">
         <span>Icono filtro</span>
-    </div>
-    <app-body></app-body>
+    </div> -->
+
+    
+        <app-body></app-body>
+    
+
 </div>
 
