--- a/src/app/home/body/card/card.component.html
+++ b/src/app/home/body/card/card.component.html
@@ -1,5 +1,5 @@
 <!-- Contenedor total -->
-<div class="relative w-96 h-[30rem] bg-white shadow-lg  rounded-3xl shadow-black ">
+<div class="relative w-96 h-[30rem] bg-gray-100 shadow-lg  rounded-3xl shadow-black hover:bg-gray-300 cursor-pointer ">
     
     <!-- Contenedor de la imagen -->
     <div class="absolute h-64 top-0 p-2 flex justify-center items-center inset-x-0">
@@ -10,19 +10,21 @@
     <div class="absolute w-96 h-1/3 bottom-8 flex justify-center text-black uppercase text-2xl">
 
         <div class="absolute top-0 space-x-3">
-            <span class="w-fit h-fit bg-gray-200 rounded-2xl px-5 font-light"> #{{number}}</span>
-            <span class="font-bold">{{name}}</span> 
+            <span class="w-fit h-fit bg-gray-300 rounded-2xl px-5 font-normal"> #{{number}}</span>
+            <span class="font-semibold text-3xl">{{name}}</span> 
         </div>
 
-        <div class="absolute bottom-0 w-fit h-fit space-x-5">
+        <!-- Tipos -->
+        <div class="absolute bottom-0 w-fit h-fit space-x-5 text-white">
             
+            <span class="{{types[0]}} py-2 px-8 rounded-3xl font-bold text-3xl font-mono">{{types[0]}}</span>
             
-            <span>{{types[0]}}</span>
-
             @if (types[1]) {
-                <span>{{types[1]}}</span>
+                <span class="{{types[1]}} py-2 px-8 rounded-3xl font-bold text-3xl font-mono">{{types[1]}}</span>
             }
+
         </div>
+
 
     </div>
 
