--- a/src/app/home/header/header.component.html
+++ b/src/app/home/header/header.component.html
@@ -5,9 +5,9 @@
         </div>
     
         <!-- Busqueda -->
-        <div class="absolute right-0 w-1/2">
-            <input type="text" class=" w-3/4 p-4 border border-gray-600 text-black rounded-lg" placeholder="Buscar pokemon..." [(ngModel)]="pokeSearch">
-            <!-- <button type="button" class="inline-block w-1/6 p-4 bg-green-500 rounded-lg hover:bg-green-600 text-sm" (click)="search()">Search</button> -->
+        <div class="absolute flex right-0 w-1/4 space-x-4">
+            <input type="text" class=" w-4/5 p-4 border border-gray-600 text-black rounded-lg" placeholder="Buscar pokemon..." [(ngModel)]="pokeSearch" (keydown.enter)="search()">
+            <button type="button" class="w-fit px-5 bg-green-500 rounded-lg hover:bg-green-600 text-sm" (click)="search()">Search</button>
         </div>
 
     </div>
