--- a/src/app/home/body/card/card.component.html
+++ b/src/app/home/body/card/card.component.html
@@ -1,5 +1,5 @@
 <!-- Contenedor total -->
-<div class="relative w-96 h-[30rem] bg-gray-100 shadow-lg  rounded-3xl shadow-black hover:bg-gray-300 cursor-pointer ">
+<div class="text-custom-font relative w-96 h-[30rem] bg-gray-100 shadow-lg  rounded-3xl shadow-black hover:bg-gray-300 cursor-pointer ">
     
     <!-- Contenedor de la imagen -->
     <div class="absolute h-64 top-0 p-2 flex justify-center items-center inset-x-0">
@@ -17,10 +17,10 @@
         <!-- Tipos -->
         <div class="absolute bottom-0 w-fit h-fit space-x-5 text-white">
             
-            <span class="{{types[0]}} py-2 px-8 rounded-3xl font-bold text-3xl font-mono">{{types[0]}}</span>
+            <span class="{{types[0]}} py-2 px-6 rounded-3xl font-bold text-3xl">{{types[0]}}</span>
             
             @if (types[1]) {
-                <span class="{{types[1]}} py-2 px-8 rounded-3xl font-bold text-3xl font-mono">{{types[1]}}</span>
+                <span class="{{types[1]}} py-2 px-6 rounded-3xl font-bold text-3xl">{{types[1]}}</span>
             }
 
         </div>
