--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,6 @@
 <div>
     <app-header (pokeNameEvent)="searchPokemon($event)"></app-header>
+    <app-filters></app-filters>
     <app-body [searchPokemonInput]="pokeSearch"></app-body>
 </div>
 
