--- a/src/styles.css
+++ b/src/styles.css
@@ -40,3 +40,7 @@
     color: white;
     -webkit-text-stroke: 1.5px rgb(0, 0, 0); 
 }
+
+.text-custom-font{
+    font-family: 'Varela Round', sans-serif;
+}
