--- a/src/app/home/body/body.component.html
+++ b/src/app/home/body/body.component.html
@@ -1,20 +1,50 @@
 <div class="flex flex-wrap justify-center">
 
-    <!-- Enlistado de pokemon a buscar -->
+    <!-- Enlistado de pokemon a buscar
     @if (searchPokemonInput) {
         @for (item of pokemon; track item.id) {
             <div class="w-fit m-10">
                 <app-card [name]="item.name" [image]="item.image" [number]="item.position" [types]="item.types"></app-card>
             </div>
         }
-    <!-- Enlistado de todos los pokemon -->
-    } @else {
+        
+        Enlistado de todos los pokemon -->
+    <!-- } @else if(filterPokemonInput && filterPokemonInput.length > 0) {
             @for (item of pokemon; track item.id) {
         <div class="w-fit m-12" (click)="openModal(item.name)">
             <app-card [name]="item.name" [image]="item.image" [number]="item.position" [types]="item.types"></app-card>
         </div>
     }
-    }
+    }  -->
+
+    <!-- Mostrar todos los pokemon. -->
+    <ng-container *ngIf="!search && !filter">
+        @for (item of pokemon; track item.id) {
+            <div class="w-fit m-12" (click)="openModal(item.name)">
+                <app-card [name]="item.name" [image]="item.image" [number]="item.position" [types]="item.types"></app-card>
+            </div>
+        }
+    </ng-container>
+
+    <!-- Mostrar pokemon por busqueda -->
+    <ng-container *ngIf="search">
+        @for (item of searchedPokemon; track item.id) {
+            <div class="w-fit m-12" (click)="openModal(item.name)">
+                <app-card [name]="item.name" [image]="item.image" [number]="item.position" [types]="item.types"></app-card>
+            </div>
+        }
+    </ng-container>
+    
+    <!-- Mostrar pokemon por filtro de tipo -->
+    <ng-container *ngIf="filter">
+        @for (item of filteredPokemon; track item.id) {
+            <div class="w-fit m-12" (click)="openModal(item.name)">
+                <app-card [name]="item.name" [image]="item.image" [number]="item.position" [types]="item.types"></app-card>
+            </div>
+        }
+    </ng-container>
+
+
 
     @if(detailPokemonBnd){
         <div class="fixed inset-0 bg-black bg-opacity-50 backdrop-blur-sm z-50"></div>
