--- a/src/app/home/header/header.component.html
+++ b/src/app/home/header/header.component.html
@@ -1,7 +1,7 @@
     <div class="relative flex items-center w-full h-32">
         <!-- Imagen (Logo) -->
         <div class="absolute left-0">
-            <img class="w-1/5" src="https://cdn.icon-icons.com/icons2/851/PNG/512/Pokedex_tool_icon-icons.com_67529.png" alt="Pokedex">
+            <!-- <img class="w-1/5" src="https://cdn.icon-icons.com/icons2/851/PNG/512/Pokedex_tool_icon-icons.com_67529.png" alt="Pokedex"> -->
         </div>
     
         <!-- Busqueda -->
