--- a/src/app/home/body/detail-pokemon/detail-pokemon.component.html
+++ b/src/app/home/body/detail-pokemon/detail-pokemon.component.html
@@ -19,35 +19,70 @@
 
 
     
-<!-- Imagen y tipos-->
-    <div class="absolute left-0 w-1/2 h-96 flex flex-col items-center">
-        <img src={{pokeImg}} alt="" class="h-full object-cover">
-        
-        <!-- <div class="absolute bottom-0 w-fit h-fit space-x-5 text-white">
-            
-            <span class="{{pokeTypes[0]}} py-2 px-6 rounded-3xl font-bold text-3xl">{{pokeTypes[0]}}</span>
-            
-            @if (pokeTypes[1]) {
-                <span class="{{pokeTypes[1]}} py-2 px-6 rounded-3xl font-bold text-3xl">{{pokeTypes[1]}}</span>
-            }
-
-        </div> -->
-
+    <!-- Imagen-->
+    <div class="absolute left-0 w-1/2 flex flex-col items-center">
+        <img src={{pokeImg}} alt="" class="h-[80%] w-[80%] object-cover">
     </div>
 
     <!-- Información -->
-    <div class="absolute right-0 w-1/3 h-fit flex flex-col gap-4">
+    <div class="absolute right-0 w-1/2 h-fit flex flex-col gap-4">
         <span>Weight: {{pokeWeight}}</span>  
         <span>Height: {{pokeHeight}}</span>
-        <span>Stats: </span>
+        <span class="">Stats: </span>
+
+    
+
+
         <div class="flex flex-row gap-3">
-            <label for="">{{pokeStatName.toUpperCase()}}</label>
 
-                <div class="relative bg-gray-300 w-full h-5 rounded-xl">
-                    <div class="absolute bg-cyan-500 h-5 w-1/4 rounded-lg"></div>
+            <label class="mr-9 capitalize">{{pokeStatHp}}</label>
+            <!-- Barra gris completa w-full -->
+                <div class="relative bg-gray-400 w-full h-5 rounded-xl">
+                    <!-- Barra azul que marca el porcentaje... w-% -->
+                    <div class="absolute bg-cyan-600 h-5 rounded-lg" [ngStyle]="{ 'width.%': pokeStatNumberHp }"></div>                
                 </div>
+            <label class="flex-grow-0">{{pokeStatNumberHp}}%</label>
 
-                <label for="">{{pokeStatNumber}}%</label>
+        </div>
+
+
+
+        <div class="flex flex-row gap-3">
+
+            <label class="mr-3 capitalize">{{pokeStatAttack}}</label>
+            <!-- Barra gris completa w-full -->
+                <div class="relative bg-gray-400 w-full h-5 rounded-xl">
+                    <!-- Barra azul que marca el porcentaje... w-% -->
+                    <div class="absolute bg-cyan-600 h-5 rounded-lg" [ngStyle]="{ 'width.%': pokeStatNumberAttack }"></div>                
+                </div>
+            <label for="">{{pokeStatNumberAttack}}%</label>
+
+        </div>
+
+
+        <div class="flex flex-row gap-3">
+
+            <label class="capitalize">{{pokeStatDefense}}</label>
+            <!-- Barra gris completa w-full -->
+                <div class="relative bg-gray-400 w-full h-5 rounded-xl">
+                    <!-- Barra azul que marca el porcentaje... w-% -->
+                    <div class="absolute bg-cyan-600 h-5 rounded-lg" [ngStyle]="{ 'width.%': pokeStatNumberDefense }"></div>                
+                </div>
+            <label class="">{{pokeStatNumberDefense}}%</label>
+
+        </div>
+
+
+        <div class="flex flex-row gap-3">
+
+            <label class="mr-3 capitalize">{{pokeStatSpeed}}</label>
+            <!-- Barra gris completa w-full -->
+                <div class="relative bg-gray-400 w-full h-5 rounded-xl">
+                    <!-- Barra azul que marca el porcentaje... w-% -->
+                    <div class="absolute bg-cyan-600 h-5 rounded-lg" [ngStyle]="{ 'width.%': pokeStatNumberSpeed }"></div>                
+                </div>
+            <label class="">{{pokeStatNumberSpeed}}%</label>
+
         </div>
  
 
