Cambio de diseño en detalle de pokemon

--- a/src/app/home/body/detail-pokemon/detail-pokemon.component.html
+++ b/src/app/home/body/detail-pokemon/detail-pokemon.component.html
@@ -25,10 +25,10 @@
     </div>
 
     <!-- Información -->
-    <div class="absolute right-0 w-1/2 h-fit flex flex-col gap-4">
-        <span>Weight: {{pokeWeight}}</span>  
+    <div class="absolute right-0 w-1/2 h-fit flex flex-col gap-8">
+        <!-- <span>Weight: {{pokeWeight}}</span>  
         <span>Height: {{pokeHeight}}</span>
-        <span class="">Stats: </span>
+        <span class="">Stats: </span> -->
 
     
 
